--- a/aurisi/src/MainWindow.glade
+++ b/aurisi/src/MainWindow.glade
@@ -259,39 +259,11 @@ Author: Michael Oswald
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <child>
-                              <object class="GtkImageMenuItem">
-                                <property name="label">gtk-new</property>
+                              <object class="GtkMenuItem" id="menuItemImportMIB">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
+                                <property name="label" translatable="yes">Import MIB...</property>
                                 <property name="use_underline">True</property>
-                                <property name="use_stock">True</property>
-                              </object>
-                            </child>
-                            <child>
-                              <object class="GtkImageMenuItem">
-                                <property name="label">gtk-open</property>
-                                <property name="visible">True</property>
-                                <property name="can_focus">False</property>
-                                <property name="use_underline">True</property>
-                                <property name="use_stock">True</property>
-                              </object>
-                            </child>
-                            <child>
-                              <object class="GtkImageMenuItem">
-                                <property name="label">gtk-save</property>
-                                <property name="visible">True</property>
-                                <property name="can_focus">False</property>
-                                <property name="use_underline">True</property>
-                                <property name="use_stock">True</property>
-                              </object>
-                            </child>
-                            <child>
-                              <object class="GtkImageMenuItem">
-                                <property name="label">gtk-save-as</property>
-                                <property name="visible">True</property>
-                                <property name="can_focus">False</property>
-                                <property name="use_underline">True</property>
-                                <property name="use_stock">True</property>
                               </object>
                             </child>
                             <child>
@@ -301,7 +273,7 @@ Author: Michael Oswald
                               </object>
                             </child>
                             <child>
-                              <object class="GtkImageMenuItem">
+                              <object class="GtkImageMenuItem" id="menuItemQuit">
                                 <property name="label">gtk-quit</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
