Updated for C&C messages

--- a/aurisi/src/MainWindow.glade
+++ b/aurisi/src/MainWindow.glade
@@ -2264,6 +2264,19 @@ Author: Michael Oswald
                           </packing>
                         </child>
                         <child>
+                          <object class="GtkButton" id="buttonScoeTC">
+                            <property name="label" translatable="yes">Insert C&amp;C SCOE Template</property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">True</property>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="fill">True</property>
+                            <property name="position">2</property>
+                          </packing>
+                        </child>
+                        <child>
                           <object class="GtkButton" id="buttonTCClear">
                             <property name="label" translatable="yes">Clear</property>
                             <property name="visible">True</property>
@@ -2273,7 +2286,7 @@ Author: Michael Oswald
                           <packing>
                             <property name="expand">False</property>
                             <property name="fill">True</property>
-                            <property name="position">2</property>
+                            <property name="position">3</property>
                           </packing>
                         </child>
                         <child>
@@ -2286,7 +2299,7 @@ Author: Michael Oswald
                           <packing>
                             <property name="expand">False</property>
                             <property name="fill">True</property>
-                            <property name="position">3</property>
+                            <property name="position">4</property>
                           </packing>
                         </child>
                       </object>
